--- a/ch01.md
+++ b/ch01.md
@@ -1,1 +1,69 @@
+# 1. 클라우드 네티이브 소개
+- **클라우드 네이티브 애플리케이션**은 **클라우드에서 실행되면서 변화에 탄력적으로 대응하고 고도로 분산되어 있는 시스템**이다.
+- 시스템은 여러 개의 서비스로 구성되며 **이 서비스들은 네트워크를 통해 서로 통신**한다.
+- [그림1.1]은 클라우드 네이티브 시스템을 정의하기 위해 필요한 모든 요소를 개괄적으로 보여준다.
+
+![1](./images/ch1/img.png)    
+출처 : 클라우드 네이티브 스프링 인 액션  
+## 1.1 클라우드 네이티브란 무엇인가?
+- 클라우드 업계의 베테랑인 `폴 프리맨틀`
+  - 클라우드 네이티브라는 용어를 처음으로 사용
+- 기존 애플리케이션을 클라우드로 옮기는 것을 `리프트 및 시프트(lift and shift)`접근 방식이라고 부르는데 이러한 방식은 **애플리케이션이 클라우드 네이티브가 되는 것은 아니다.**
+  - 어떻게 하는 것이 클라우드 네이티브 일까?
+
+## 1.1.1 클라우드 네이티브에서의 세가지 P
+- `애플리케이션이 클라우드를 위해 특별히 설계`된다는 것은 `무엇을 의미`할까?
+- 클라우드 네이티브 컴퓨팅 재단(cloud native computing foundation, CNCF)은 **클라우드 네이티브에 대해 정의**를 했다.
+- **3가지 P**
+  - `플랫폼(platform)` : 클라우드 네이티브 애플리케이션은 **클라우드(공용, 사설 또는 하이브리드) 같은 같은 동적 분산 환경을 기반으로 하는 플랫폼에서 실행 된다.**
+  - `속성(property)` : 클라우드 네이티브 애플리케이션은 **확장 가능**, **느슨하게 결합**, **복원력**이 뛰어나고, **관리가 용이**하며 **관찰 가능하도록 설계** 된다.
+  - `실행(practice)` : 견고한 자동화를 통해 빈번하고 예측 가능한 방식으로 시스템을 변경하는 것이 포함된다.(`자동화`, `지속적 전달`, `데브옵스`)
+
+## 1.2 클라우드와 클라우드 컴퓨팅 모델
+![1](./images/ch1/img1.png)    
+출처 : 클라우드 네이티브 스프링 인 액션  
+- 클라우드는 컴퓨팅 자원을 소비자에게 제공하는 IT 인프라이다.
+  - 소비자 입장에서는 서버 하드웨어나 네트워크와 같은 **물리적 자원에 대해 신경 쓸 필요가 없다.**
+  - **필요에 따라 리소스를 제공**받거나 **확장**이 가능한 온디맨드 셀프 서비스를 통해 컴퓨팅 자원을 얻을 수 있다.
+- **전통적인 IT 인프라로는 탄력성을 제공할 수 없다.**
+- **클라우드 컴퓨팅 모델**을 사용하면 **실제로 사용하는 것에 대해서만 비용을 지불**하면 된다.
+  - 이 모델에서 `탄력성(elasticity)`은 주요 특징 중 하나다.
+  - `컴퓨팅 자원`은 필요에 따라 **동적으로 더 많이 제공하거나 회수**할 수 있다.
+- 클라우드 서비스를 제공하기 위한 몇가지 배포 모델이 존재한다.
+  - **사설 클라우드** : 한 단체나 조직에서만 사용하도록 제공하는 클라우드 인프라이다.
+  - **공공 클라우드** : 일반 사용자들에게 공공으로 제공되는 클라우드 인프라이다.
+  - **하이브리드 클라우드** : 사설 클라우드 + 공공 클라우드 인프라이다.
+
+#### [클라우드 컴퓨팅팅 서비스모델]
+![1](./images/ch1/img2.png)    
+출처 : 클라우드 네이티브 스프링 인 액션  
+
+### 1.2.1 서비스형 인프라스트럭처
+
+### 1.2.2 서비스형 컨테이너
+### 1.2.3 서비스형 플랫폼
+### 1.2.4 서비스형 함수
+### 1.2.5 서비스형 소프트웨어
+
+## 1.3 클라우드 네이티브 애플리케이션의 특성
+## 1.3.1 확장성
+## 1.3.2 느슨한 결합
+## 1.3.3 복원력
+## 1.3.4 관측 가능성
+## 1.3.5 관리 용이성
+
+## 1.4 클라우드 네이티브를 지원하는 문화 및 관행
+### 1.4.1 자동화
+### 1.4.2 지속적 전달
+### 1.4.3 데브옵스
+
+//TODO
+## 1.5 클라우드가 최선의 선택인가?
+### 1.5.1 속도
+### 1.5.2 복원력
+### 1.5.3 확장성
+### 1.5.4 비용
+
+
+
 
