--- a/ch01.md
+++ b/ch01.md
@@ -17,7 +17,7 @@
 - **3가지 P**
   - `플랫폼(platform)` : 클라우드 네이티브 애플리케이션은 **클라우드(공용, 사설 또는 하이브리드) 같은 같은 동적 분산 환경을 기반으로 하는 플랫폼에서 실행 된다.**
   - `속성(property)` : 클라우드 네이티브 애플리케이션은 **확장 가능**, **느슨하게 결합**, **복원력**이 뛰어나고, **관리가 용이**하며 **관찰 가능하도록 설계** 된다.
-  - `실행(practice)` : 견고한 자동화를 통해 빈번하고 예측 가능한 방식으로 시스템을 변경하는 것이 포함된다.(`자동화`, `지속적 전달`, `데브옵스`)
+  - `실행(practice)` : **견고한 자동화**를 통해 빈번하고 **예측 가능한 방식으로 시스템을 변경하는 것이 포함**된다.(`자동화`, `지속적 전달`, `데브옵스`)
 
 ## 1.2 클라우드와 클라우드 컴퓨팅 모델
 ![1](./images/ch1/img1.png)    
@@ -39,18 +39,71 @@
 출처 : 클라우드 네이티브 스프링 인 액션  
 
 ### 1.2.1 서비스형 인프라스트럭처
-
+- 서비스형 인프라스트럭처(**IaaS**)는 `서버 & 스토리지 & 네트워크 자원을 제어하고 제공`한다.
+  - aws ec2, 애저 가상 머신, 구글 컴퓨트 엔진
 ### 1.2.2 서비스형 컨테이너
+- 서비스형 컨테이너(**CaaS**)는 `컨테이너를 만들고 관리`한다.
+- 컨테이너 관리 도구
+  - 도커 스웜, 아파치 메소스, **쿠버네티스**
+- CaaS의 표준 쿠버네티스
+  - EKS(아마존), AKS(애저), GKE(구글), ACK(알리바바), 디지털오션 쿠버네티스
 ### 1.2.3 서비스형 플랫폼
+- 서비스형 플랫폼(**PaaS**) **클라우드 공급자가 인프라, 도구, API를 제공**하고, 이를 사용해 애플리케이션을 빌드&배포 한다.
+  - AWS 빈스토크, 히로쿠, 애저 앱 서비스 등등...
 ### 1.2.4 서비스형 함수
+- 서비스형 함수(**FaaS**) 모델의 서버리스 컴퓨팅을 사용하면 사용자는 함수의 형태로 자신의 애플리케이션의 비지니스 로직을 구현하며, 플랫폼은 서버&인프라를 제공한다.
+  - HTTP 요청 또는 메시지와 같은 이벤트가 발생하면 실해오디게 할 수 있다.
+  - AWS 람다, 애저 함수, 구글 클라우드 함수 등이 있다.
+  - 오픈소스 진영에는 **Knative**, 아파치 오픈휘스크(Apache OpenWhisk)가 있다.
 ### 1.2.5 서비스형 소프트웨어
+- **가장 추상화된 서비스**는 서비스형 소프트웨어(**SaaS**) 다.
+- `소비자`는 사용자로서 애플리케이션에 액세스 하고 `클라우드 공급자`는 소프트웨어 & 인프라 스택 전체를 관리한다.
+- SaaS의 예시로는 깃허브, 마이크로서프트 365가 있다.
 
 ## 1.3 클라우드 네이티브 애플리케이션의 특성
+- CNCF는 클라우드 네이티브 애플리케이션이 가져야 할 **다섯 가지 주요 속성을 정의**한다
+> **클라우드 네이티브 속성 5가지**
+> - 확장성 : 워크로드의 증가 또는 감소를 동적지원  
+> - 느슨한 결합 : 각각의 구성 요소들은 서로에 대해 최소한의 지식만 갖음  
+> - 회복성 : 문제 직면 시 서비스 수준 유지
+> - 유지 보수성 : 외부에서의 제어 수준 : 갱신, 설정, 배포
+> - 관측 가능성 : 내부 상태에 대해 외부로부터 추정된 지식
+![1](./images/ch1/img3.png)    
+출처 : 클라우드 네이티브 스프링 인 액션  
 ## 1.3.1 확장성
+- 수직적 확장(vertical scalability)
+  - CPU나 메모리와 같은 컴퓨팅 리소스를 추가하거나 제거하는 것을 의미한다.
+  - 리소스를 무한정으로 추가할 수없다.
+- 수평적 확장(horizontal scalability)
+  - 노드나 컨테이너를 추가하는 것을 의미한다.
+
+ ![1](./images/ch1/img4.png)    
+출처 : 클라우드 네이티브 스프링 인 액션  
+
+- **클라우드에서는 수평적 확장을 선호**한다.
+- **클라우드는 탄력적** 이기 때문에 짧은 시간에 동적으로 애플리케이션 인스턴스를 늘리거나 줄일 수 있다.
+- `확장할 수 있는 애플리케이션을 설계`하는 것은 **개발자로서의 책임**이다.
+  - 확장성의 큰 장애물은 애플리케이션 상태이다.
+  - 상태를 갖는지(stateful), 상태를 갖지 않는지(stateless) 문제로 귀결돈다.
+  - 이 책에서는 **상태를 갖지 않는 애플리케이션을 작성**하고 **문제없이 확장**할 수 있는 기법에대해 다룬다.
+
 ## 1.3.2 느슨한 결합
+- `느슨한 결합` : **각 컴포넌트들이 다른 컴포넌트에 대한 지식을 가지고 있지 않은 시스템**
+- **느슨한 결합(coupling)**과 **높은 응집력(cohension)**으로 **모듈화를 적절하게 달성하는 것을 목표**로 해야 한다.
+
+- 모듈화의 세 가지 이점(파르나스, Parnas)
+  - 관리 : **각 모듈이 느슨하게 결합**, 팀은 서로 간의 **의사소통에 많은 시간을 할애할 필요가 없다.**
+  - 제품 유연성 : 각 모듈은 독립적으로 진화하기 때문에, **전체 시스템은 유연**하다.
+  - 이해력 : **하나의 모듈만 이해하고 작업**
+ 
+- 책 전반에 걸쳐 애플리케이션에서 `느슨한 결합을 구현하는 기법`을 살펴본다.
+
 ## 1.3.3 복원력
+- 
 ## 1.3.4 관측 가능성
+- 
 ## 1.3.5 관리 용이성
+- 
 
 ## 1.4 클라우드 네이티브를 지원하는 문화 및 관행
 ### 1.4.1 자동화
