--- a/ch01.md
+++ b/ch01.md
@@ -92,16 +92,35 @@
 - **느슨한 결합(coupling)**과 **높은 응집력(cohension)**으로 **모듈화를 적절하게 달성하는 것을 목표**로 해야 한다.
 
 - 모듈화의 세 가지 이점(파르나스, Parnas)
-  - 관리 : **각 모듈이 느슨하게 결합**, 팀은 서로 간의 **의사소통에 많은 시간을 할애할 필요가 없다.**
-  - 제품 유연성 : 각 모듈은 독립적으로 진화하기 때문에, **전체 시스템은 유연**하다.
-  - 이해력 : **하나의 모듈만 이해하고 작업**
+  - `관리` : **각 모듈이 느슨하게 결합**, 팀은 서로 간의 **의사소통에 많은 시간을 할애할 필요가 없다.**
+  - `제품 유연성` : 각 모듈은 독립적으로 진화하기 때문에, **전체 시스템은 유연**하다.
+  - `이해력` : **하나의 모듈만 이해하고 작업**
  
 - 책 전반에 걸쳐 애플리케이션에서 `느슨한 결합을 구현하는 기법`을 살펴본다.
 
 ## 1.3.3 복원력
-- 
+- **복원력(resilience)** 는 허용 가능한 수준의 서비스를 제공하고 유지할 수 있도록 하는 기능이다.
+- `클라우드 네이티브 시스템 구축`시, 장애가 발생하더라도 **애플리케이션은 언제나 사용할 수 있도록 보장하는 것을 목표**로 해야 한다.
+- 과거에는 결함을 예외적 상황으로 간주하였지만, `클라우드 네이티브 시스템`에서는 예외적으로 발생하는 것이 아니라 **일어날 수 밖에 없는 법칙**처럼 생각해야 한다.
+
+- 복원력에 관한 세 가지 필수적인 개념
+  - `결함(fault)` : 소프트웨어 또는 인프라에서 **잘못된 내부 상태**를 생성하는 고장
+  - `오류(error)` : 예상하는 작동과 시스템이 실제 보이는 작동 간의 불일치
+  - `실패(failure)` : 시스템이 응답하지 않거나 요구사양에 따라 작동하지 못하게 되는 경우이다.
+ 
+- 결함 -> 오류 -> 실패로 확장되어 연쇄적으로 이어질 수 있기 때문에 **내결함성(fault tolerant)을 갖도록 설계** 해야 한다.
+- 한 부분에서 실패가 일어나더라도 시스템의 다른 구성 요소에 영향을 끼치지 않아야 하고, **실패가 발생한 부분이 해결이 될 떄 까지 격리되어야 한다.**
+- 시스템은 `자가 수리(self-repairging)` , `자가 치유(self-healing)`되는 것이 바람직하며, **클라우드 모델은 이것을 가능하게 한다.**
+  - **서킷 브레이커**(circuit breaker)
+  - **재시도**(retires)
+  - **타임아웃**(timeout)
+  - **사용률 제한**(rate limit)
 ## 1.3.4 관측 가능성
-- 
+- 모니터링
+- 경고/시각화
+- 인프라를 추적하는 분산 시스템
+- 로그 집계/분석
+  
 ## 1.3.5 관리 용이성
 - 
 
