--- a/ch01.md
+++ b/ch01.md
@@ -78,7 +78,7 @@
   - 노드나 컨테이너를 추가하는 것을 의미한다.
 
  ![1](./images/ch1/img4.png)    
-출처 : 클라우드 네이티브 스프링 인 액션  
+출처 : 클라우드 네이티브 스프링 인 액션    
 
 - **클라우드에서는 수평적 확장을 선호**한다.
 - **클라우드는 탄력적** 이기 때문에 짧은 시간에 동적으로 애플리케이션 인스턴스를 늘리거나 줄일 수 있다.
@@ -116,15 +116,39 @@
   - **타임아웃**(timeout)
   - **사용률 제한**(rate limit)
 ## 1.3.4 관측 가능성
-- 모니터링
-- 경고/시각화
-- 인프라를 추적하는 분산 시스템
-- 로그 집계/분석
+- **관측 가능성(observability)은** 그 시스템의 `외부 출력`에서 `내부 상태`를 **얼마나 잘 추론할 수 있는지를 측정**하는 것이다.
+  - **외부 출력**은 `측정값`(metirc), `로그`(log), `트레이스`(trace)와 같은 데이터가 될 수 있다.
+ ![1](./images/ch1/img5.png)    
+출처 : 클라우드 네이티브 스프링 인 액션  
+
+#### [관측 가능성의 네 가지 요소]
+- `모니터링`(monitoring)
+  - 애플리케이션의 **전반적인 상태 정보**를 얻고 **실패를 식별**
+  - ex) 스프링 부트 엑추에이터, 프로메테우스
+- `경고/시각화`(alerting/visualization)
+  - 애플리케이션 모니터링 동안 **오류가 식별**되면 **경고를 보낼 수 있어야**하고, 이를 처리하기 위한 조치가 이루어져야 한다.
+- `인프라를 추적하는 분산 시스템`(distributed systems tracing infrastructure)
+  - **분산 시스템**에서는 서로 다른 **서브시스템 사이에서 흐르는 데이터를 추적하는 것이 필수적**이다.
+  - `오픈텔레메트리(OpenTelemetry)`, `그라파냐 템포(Grafana Tempo)`를 사용해 **트레이스를 수집 및 시각화**
+- `로그 집계/분석`(log aggregation/analytics)
+  - 애플리케이션의 **이벤트를 추적**하는 것은 **작동을 추론하고 문제 발생 시 디버깅 하기 위해 중요한 작업**이다.
+  - `플루언트 비트(Fluent Bit)`, `로키(Loki)`, `그라파냐`를 사용해 **로그를 수집 및 시각화**하고 클라우드 네이티브 환경에서 로깅을 위한 최상의 방법을 배울 것이다.
   
 ## 1.3.5 관리 용이성
-- 
-
+- `관리 용이성`은 **외부 입력이 시스템의 상태 및 출력**을 `얼마나 쉽고 효율적으로 변경`할 수 있는지에 대한 것이다.
+- **즉, 관리용이성이란 코드를 바꾸지 않고도 애플리케이션의 작동을 수정할 수 있는 능력이다.**
+  - `유지 보수성과의 다른점`은 코드 변경을 통해 얼마나 쉽고 효율적으로 변경할 수 있는지에 관한것이다.
+- `관리 용이성`의 한 측면으로 전체 시스템을 계속 실행하며, 동시에 애플리케이션을 배포하고 업데이트 하는 것이다.
+- `관리 용이성`의 또다른 요소는 설정(configuration)이다.
+  - 코드를 변경하거나 새로운 릴리스를 빌드하지 않고도 시스템의 작동을 수정할 수 있도록 설정하는 것이 바람직하다.
+  - ex) 데이터소스URL, 유저&패스워드, 인증서, 기능 플래그(feature flag)
+  - k8s 컨피그맵(ConfigMap), 시크릿(secret), 커스터마이즈(Kustomize)등을 사용해 애플리케이션 설정을 변경할 수 있다.
+- `관리 용이성`은 그 변경을 얼마나 쉽고 효율적으로 할 수 있는가에 관한 것이며, 복잡성 때문에 많은 것을 `자동화`를 통해 관리하는 것을 `목표`로 해야하며, **클라우드 네이티브의 세 가지 P중 마지막 단계인 실행으로 이어진다.**  
+  
 ## 1.4 클라우드 네이티브를 지원하는 문화 및 관행
+- CNCF, `강력한 자동화와 결합하면 최소한의 노력으로 큰 영향력을 끼치는 변경을 자주 그리고 예측 가능한 방식으로 수행할 수 있게 해준다.`
+  - 자동화, 지속적 전달, 데브옵스
+
 ### 1.4.1 자동화
 ### 1.4.2 지속적 전달
 ### 1.4.3 데브옵스
