--- a/ch01.md
+++ b/ch01.md
@@ -50,7 +50,7 @@
 ### 1.2.3 서비스형 플랫폼
 - 서비스형 플랫폼(**PaaS**) **클라우드 공급자가 인프라, 도구, API를 제공**하고, 이를 사용해 애플리케이션을 빌드&배포 한다.
   - AWS 빈스토크, 히로쿠, 애저 앱 서비스 등등...
-### 1.2.4 서비스형 함수
+### 1.2.4 서비스형 함수
 - 서비스형 함수(**FaaS**) 모델의 서버리스 컴퓨팅을 사용하면 사용자는 함수의 형태로 자신의 애플리케이션의 비지니스 로직을 구현하며, 플랫폼은 서버&인프라를 제공한다.
   - HTTP 요청 또는 메시지와 같은 이벤트가 발생하면 실해오디게 할 수 있다.
   - AWS 람다, 애저 함수, 구글 클라우드 함수 등이 있다.
