--- a/ch01.md
+++ b/ch01.md
@@ -151,7 +151,45 @@
   - 자동화, 지속적 전달, 데브옵스
 
 ### 1.4.1 자동화
+- `자동화(automation)`는 클라우드 네이티브의 핵심이다.
+  - 반복적인 수동 작업을 자동화해 네이티브 애플리케이션을 빠르게 배포한다
+  - 애플리케이션 구축부터 배포, 인프라, 설정 까지 자동화 할 수 있다.
+  - 자동화를 통해 **더 신뢰할 수 있고 더 효율적인 결과를 얻을 수 있다.**
+- **클라우드 자동화의 두 가지 중요한 범주**는 `인프라 제공` 및 `설정 관리` 이다.
+  - `코드형 인프라스트럭처`(infrastructure as code)
+  - `코드형 설정`(configuration as code)
+- 클라우드 제공업체는 API를 제공하며 해당 API를 통해 서버, 네트워크, 스토리지를 생성할 수 있다.
+  - **terraform**을 통해 `형상 관리`
+  - **Ansible**와 같은 도구를 사용하면 서버&네트워크 설정할 수 있다.
+- 인프라 생성&설정 관리 작업을 자동화하면 불안정하고 **신뢰성이 떨어지는 서버**, `스노플레이크 서버(Snowflak Server)`를 **생성하는 것을 피할 수 있다.**
+- `자동화를 통해` **피닉스 서버**(Phoenux Server) 생성이 가능하다.
+  - 모든 작업 자동화
+  - 모든 변경 사항 형상관리 시스템 추적
+  - 셋업 언제든지 반복 가능 서버 생성 => 극단으로 가면 **불가변 서버(immutable server)** 얻을 수 있다
+
+> 마틴파울러, 코드형 인프라스트럭처
+> - 다른 소프트웨어 시스템을 다룰 때와 동일한 방식으로 **소스 코드를 통해 컴퓨팅 및 네트워크 인프라를 정의하는 접근 방식** 이라고 정의한다.
+
+> **NOTE**
+> - 애완동물 vs 가축
+> - 애완동물은 스노플레이크서버를 의미하고, 가축은 불가변 서버를 의미한다.
+
 ### 1.4.2 지속적 전달
+- `지속적 전달`이란 **프로덕션 환경에 언제든지 배포할 수 있는 방식으로 구축하는 소프트웨어 개발의 한 분야**이다.
+  - 지속적 전달을 통해 짧은 주기로 기능을 구현하여 언제든지 소프트웨어를 배포할 수 있다.
+- `지속적 통합`(continuous integration, CI)
+  - 지속적 전달의 토대가 되는 관행이다.
+  - **개발자는 변경 사항을 기본 브랜치(메인 브랜치)에 지속적으로, 적어도 하루에 한 번 커밋한다.**
+  - 소스는 `자동`으로 `컴파일`되고 `테스트`되며 실행 가능한 아티팩트로 패키징된다.
+  - 새로운 변경이 있을때마다 **소프트웨어 상태에 대한 피드백을 빨리 얻고자 하는 의도**이다.
+- `지속적 전달`(continuous delivery, CD)
+  - CI를 기반으로, **기본 브랜치가 문제없이 배포 가능한 상태를 유지하도록 하는 데 중점**을 둔다.
+  - **배포 유효성**을 검증하기 위해 `사용자 수락 테스트`, `성능 테스트`, `보안 테스트`, `컴플라이언스 테스트`와 같은 테스트를 거친다.
+  - 지속적 전달은 **배포 파이프라인**을 통해 전체 `프로세스의 자동화를 촉진`한다.
+  - 지속적 전달 vs 지속적 배포
+    - `지속적 전달`은 **소프트웨어가 실제 서비스 환경에 배포될 수 있는 상태인지 확인을 필요로 한다.**
+    - `지속적 배포`는 배포 파이프라인에 마지막 단계를 추가하여 변경된 사항을 프로덕션에 자동으로 배포하는것.
+   
 ### 1.4.3 데브옵스
 
 //TODO
