--- a/ch01.md
+++ b/ch01.md
@@ -139,7 +139,7 @@
 - `관리 용이성`은 **외부 입력이 시스템의 상태 및 출력**을 `얼마나 쉽고 효율적으로 변경`할 수 있는지에 대한 것이다.
 - **즉, 관리용이성이란 코드를 바꾸지 않고도 애플리케이션의 작동을 수정할 수 있는 능력이다.**
   - `유지 보수성과의 다른점`은 코드 변경을 통해 얼마나 쉽고 효율적으로 변경할 수 있는지에 관한것이다.
-- `관리 용이성`의 한 측면으로 전체 시스템을 계속 실행하며, 동시에 애플리케이션을 배포하고 업데이트 하는 것이다.
+  - `관리 용이성`의 한 측면으로 전체 시스템을 계속 실행하며, 동시에 애플리케이션을 배포하고 업데이트 하는 것이다.
 - `관리 용이성`의 또다른 요소는 설정(configuration)이다.
   - 코드를 변경하거나 새로운 릴리스를 빌드하지 않고도 시스템의 작동을 수정할 수 있도록 설정하는 것이 바람직하다.
   - ex) 데이터소스URL, 유저&패스워드, 인증서, 기능 플래그(feature flag)
@@ -191,14 +191,123 @@
     - `지속적 배포`는 배포 파이프라인에 마지막 단계를 추가하여 변경된 사항을 프로덕션에 자동으로 배포하는것.
    
 ### 1.4.3 데브옵스
+- `데브옵스(DevOps)`는 **클라우드 네이티브** 전환시 파악해야 할 **중요한 개념**이다.
+> **켄 머그리지**, 소트웍스 수석 기술자
+> - **지위**나 **배경**에 관계없이 사람들이 시스템을 구상, 개발, 배포 및 운영하기 위해 함께 **협력하는 문화**이다.
+- `데브옵스`는 **문화**이며, **공통의 목표를 향해 함께 일하는 것**이다.
+  - 개발자, 테스터, 운영자, 보안 전문가 등 자신의 **지위나 배경에 관계없이 아이디어를 제시 및 가치 창출**
+- `데브옵스`는 기능 팀, QA팀, 운영 팀 사이의 장벽이 없음을 의미한다.
+  - **애자일의 자연스러운 연장선**이다.
 
-//TODO
+#### [데브옵스]
+- `데브옵스`는 노옵스(NoOps)를 의미하지 않는다.
+  - 개발자가 운영을 담당, 데브옵스는 **공동 작업**이다.
+  - 한 팀에 두 가지 역할이 다 있어 **처음 아이디어 부터 제품 생산까지** 팀의 기술에 이바지 한다.
+- `데브옵스`는 도구가 아니다.
+  - **데브옵스 툴을 사용**한다고하여, **데브옵스 조직이 될 수 없다.** 툴은 데브옵스를 위해 사용될 뿐이다.
+    - 도커, 앤서블, 쿠버네티스, 프로메테우스
+  - **데브옵스는 하나의 문화다.**
+- `데브옵스`는 자동화가 아니다.
+  - 데브옵스에 자동화는 필수적이지만, 자동화가 곧 데브옵스를 의미하지는 않는다.
+  - **아이디어에서 생산까지** 함께 작업하는 **개발자와 운영자에 관한 것**이다.
+- `데브옵스`는 역할이 아니다.
+  - 자동화 도구, 스크립팅, IT 시스템에 대한 숙련된 사람들을 보통 데브옵스라 부르지만, **데브옵스는 특정 역할이 아니다.**
+- `데브옵스`는 팀이 아니다.
+  - 기업이나 조직이 데브옵스 팀을 별도로 구성하는데, **데브옵스는 팀이 아니다.**
+
+- `데브옵스`는 **개발자**와 **운영자**에게만 적용되는 것이 아니다.
+- `데스옵스`는 모두 **함께 제품 수명 주기에 대한 책임**이 있으며 **지속적 전달이라는 목표**를 달성한다.
+  - 테스터, 보안전문가 등등 소프트웨어에 수명 책임에 관한 다른 사람들의 역할도 포함된다.
+
 ## 1.5 클라우드가 최선의 선택인가?
-### 1.5.1 속도
-### 1.5.2 복원력
-### 1.5.3 확장성
-### 1.5.4 비용
+- 새로운 기술이나 접근 방식에 대해 언급한다는 이유만으로 **해당 기술을 채택하고 적용**한다.
+  - 시스템이 클라우드 네이티브를 통해 해결하려는 문제점을 가지고 있지 않다면, `클라우드 네이티브`는 최적의 방안이 아니다.
+- 언제 `클라우드 네이티브`로 옮겨가는 것이 좋을가?
 
+#### [클라우드 네이티브 옮겨가기 위한 고려사항]
+- `속도` : 더 빠르고 유연한 배포 
+- `복원력` : 가용성 및 안정성
+- `확장성` : 탄력성 및 동적 확장성
+- `비용` : 효율성 및 비용 최적화
+
+### 1.5.1 속도
+- 기업의 목표는 소프트웨어를 더 신속하게 출시하는 것이다.
+  - **경쟁우위 차지** 
+  - 적절한 시기에 출시하는 것은 `성공`과 `실패`의 **차이를 만들어 낸다.**
+- **소규모의 빈번한 출시**는 **고객에게서 더 빨리 피드백**을 받을 수 있다는 것을 의미한다.
+  - 피드백 루프가 짧아져, **새로운 기능과 관련된 위험이 감소**
+  - 더 작은 릴리스로 **실패할 가능성 감소**
+
+- **전통적인 개발방식**
+  - 대규모 릴리스, 유연성 부족, 길게 늘어진 출시 사이클
+- **클라우드 네이티브 접근방식** 
+  - 자동화, 지속적 전달, 데브옵스
+  - **더 빨리 진행**할 수 있고 **출시 시간을 단축**할 수 있다.
+
+### 1.5.2 복원력
+- **실패는 항상 일어난다.**
+  - 실패를 예측하고 예외로 취급하던 시대는 지났다.
+  - 변화는 예외가 아니라 **상수**다.
+- **복원력이 좋은 시스템**
+  - 잘못된 일이 발생하더라도 **서비스를 계속 제공**한다.
+  - 문제해결을 위한 작업&업그레이드는 **다운타임 없이 수행**되어야 한다.
+- **안정적이며, 복원력 높아야 하는 요구 사항**이라면 **클라우드 네이티브는 좋은 선택**이다.
+### 1.5.3 확장성
+- `탄력성`은 **부하에 따른 소프트웨어 확장**을 의미 한다.
+- 앞으로 일어날 일을 **예측하는 것은 어렵다.**
+  - 확장 가능한 애플리케이션을 만드는 것만으로 충분치 않다.
+  - **상황에 따라 동적으로 확장**할 수 있어야 한다.
+- **탄력성 확보**를 위해, `확장성 높은 클라우드 네이티브 애플리케이션`을 `클라우드`와 결합해 사용할 수 있다.
+### 1.5.4 비용
+- `소프트웨어 개발자로서` **비용을 고려해야 할 책임**은 있다.
+  - 실제 사용한 만큼 지불
+- `클라우드 네이티브 방식을 채택`하여 **비용 최적화**를 할 수 있다.
+- 복원력이 높아, 다운타임 및 시스템 실패와 관련된 비용도 낮아진다.
+- 느슨하게 결합되어 있기 때문에 경쟁우위를 갖을 수 있다.
+
+> **클라우드로 옮겨갈 때 숨겨진 비용**
+> - 마이그레이션 비용 고려해야 한다.
+> - 직원들의 역량이 준비되지 않았을경우, 교육에 투자 및 클라우드 컨설턴트 고용해야 할 수도 있다.
+
+## 1.6 클라우드 네이티브 구성
+- 클라우드 네이티브가 곧 특정기술(MSA, 컨테이너)을 의미하는 것은 아니다.
+#### [클라우드 일반적인 구성]
+- `컨테이너`
+  - 경량화, 독립적인 컴퓨팅 컨텍스트
+- `오케스트레이션`
+  - 컨테이너 스케줄링, 클러스터 관리
+- `서버리스 및 함수`(Faas)
+  - 클라우드 플랫폼에서 관리되는 서비스
+
+- 이책에서는 **스프링 네이티브**(Spring Native), **스프링 클라우드 함수**(Spring Cloud Funtion)을 사용해, 애플리케이션 구축 방법을 다룬다.
+
+### 1.6.1 컨테이너
+- 애플리케이션은 특정 환경에서 실행되도록 작성되어 있다.
+- **모든 환경을 가능한 비슷하게 유지**하는 것이 중요하다.
+  - 이 부분이 **컨테이너가 필요한 지점**이다.
+- 컨테이너 이전에는 `환경 재구축`, `가상 컴퓨터(vmware)`에 의존했다.
+- `컨테이너`는 애플리케이션 실행을 위한 모든것을 가지고 있다.
+  - 호스트OS와 **커널을 공유**
+  - **네임스페이스** : 프로세스 간 `리소스 분할`
+  - **c그룹** : 프로세스 `리소스 사용  제어하고 제한`
+- `클라우드 네이티브` 에서 **컨테이너는 왜 인기가 많을까?**
+  - 민첩성, 이식성, 배포 반속성이 뛰어나다.
+  - 매우 가볍고, 리소스를 덜 사용하기 때문에 **확장성**이 좋다.
+- `가상화`와 `컨테이너`는 **상호 배타적인 관계가 아니다.**
+  - 가상 머신 위에 컨테이너 실행
+  - IaaS 역시 가상화 계층을 제공 한다.
+
+- 이책에서는 CNCF 프로젝트인 **클라우드 네이티브 빌드팩**을 사용해 **스프링 애플리케이션을 컨테이너**화 방법에 대해 배운다.
+### 1.6.2 오케스트레이션
+
+### 1.6.3 서버리스
+
+## 1.7 클라우드 네이티브 애플리케이션을 위한 아키텍처
+### 1.7.1 다중 계층에서 마이크로서비스 아키텍처까지 그리고 그 이후
+### 1.7.2 클라우드 네이티브 애플리케이션을 위한 서비스 기반 아키텍처
+
+
+## 요약
 
 
 
