--- a/ch01.md
+++ b/ch01.md
@@ -298,9 +298,25 @@
   - IaaS 역시 가상화 계층을 제공 한다.
 
 - 이책에서는 CNCF 프로젝트인 **클라우드 네이티브 빌드팩**을 사용해 **스프링 애플리케이션을 컨테이너**화 방법에 대해 배운다.
+  
 ### 1.6.2 오케스트레이션
+- 수십 또는 수백 개의 컨테이너를 여러 대의 서버에 배포하고 처리하려면 관리할 도구가 필요하다.
+- CaaS 관점에서, `배포 대상`은 더 이상 하나의 서버가 아니라 **여러 서버로 이루어진 클러스터가** 된다.
+- `컨테이너 오케스트레이션`은 **다양한 작업을 자동화** 해준다.
+  - 머신을 생성 및 삭제
+  - cpu 및 메모리 스케줄링 및 배포
+  - 컨테이너를 동적으로 확장, 상태 모니터링
+  - 컨테이너 간 네트워크 설정, 라우팅, 서비스 검색, 로드 밸런싱 정의
+  - 보안 및 액세스 제어
+  - 서비스 노출, 포트 및 네트워크 구축
+  - 컨테이너에 자원 할당
+- `오케스트레이션` 툴에 대한 명령은 **선언적**이다.
+  - `yaml 파일`을 **통해 수행**된다.
+- `오케스트레이터` 종류
+  - 쿠버네티스, 도커 스웜, 아파치 메소스
 
 ### 1.6.3 서버리스
+- 
 
 ## 1.7 클라우드 네이티브 애플리케이션을 위한 아키텍처
 ### 1.7.1 다중 계층에서 마이크로서비스 아키텍처까지 그리고 그 이후
