--- a/ch01.md
+++ b/ch01.md
@@ -316,7 +316,23 @@
   - 쿠버네티스, 도커 스웜, 아파치 메소스
 
 ### 1.6.3 서버리스
-- 
+- 서버리스 컴퓨팅 모델을 사용하면 개발자는 애플리케이션 비지니스 로직 구현에만 집중할 수 있다.
+- `서버리스 아키텍처`는 **두 가지 모델**로 나뉜다.
+  - **서비스형 백엔드**(Backend as a service, Baas)
+    - 클라우드 공급자가 제공하는 타사 서비스에 의존하는 애플리케이션
+    - 구글 파이퍼베이스를 사용, AWS API 게이트웨이 사용하여, rest api 제공 및 관리
+  - **서비스형 함수**(Function as a service, Faas)
+    - `상태가 없고` `이벤트 의해` 실행되며, `플랫폼에서 관리`하는 애플리케이션이다.
+    - Faas 모델은 두 가지 유형으로 제공 된다.
+      - 첫째, AWS 람다, 애저 함수 등 공급자 제공 Faas
+      - 둘째, 오픈소스 프로젝트 기반 서버리스 팰랫폼 선택, **Knative**
+
+- `서버리스 애플리케이션`은 **이벤트 기반**이며, `HTTP 요청`이나 `메시지 이벤트`가 있을때 실행된다. 
+- `서버리스 애플리케이션`은 **실제 사용한 것에 대해서만 비용을 지불**한다.
+  - **온디멘드**
+- `서버리스 애플리케이션`은 필요한 경우에만 리소스가 제공된다.
+- **처리할 것이 없으면 모든 것이 중단**된다.
+  - **제로 스케일링**(scaling to zero)
 
 ## 1.7 클라우드 네이티브 애플리케이션을 위한 아키텍처
 ### 1.7.1 다중 계층에서 마이크로서비스 아키텍처까지 그리고 그 이후
