--- a/ch01.md
+++ b/ch01.md
@@ -334,12 +334,69 @@
 - **처리할 것이 없으면 모든 것이 중단**된다.
   - **제로 스케일링**(scaling to zero)
 
-## 1.7 클라우드 네이티브 애플리케이션을 위한 아키텍처
-### 1.7.1 다중 계층에서 마이크로서비스 아키텍처까지 그리고 그 이후
-### 1.7.2 클라우드 네이티브 애플리케이션을 위한 서비스 기반 아키텍처
+- 특정 플랫폼에서 함수를 작성시, **다른 플랫폼으로 옮기는 것이 쉽지 않다.**
+  - **Knative**가 빠르게 인기를 얻은 이유다.
+  - `k8s를 구축한다는것`은 **서버리스를 워크로드를 쉽게 옮길 수 있다**는 것을 의미한다.
 
+## 1.7 클라우드 네이티브 애플리케이션을 위한 아키텍처
+- 클라우드 네이티브 애플리케이션의 설계와 디자인 몇 가지 원칙
+
+#### [클라우드 네이티브 아키텍처 요소]
+  - `애플리케이션 서비스`
+    - 느슨히 결합, 비상태 유지, 독립적 배포할 수 있는 단위
+  - `데이터 서비스`
+    - DB, 메시징 시스템
+  - `상호작용`
+    - HTTP, RSocket, gPRC
+### 1.7.1 다중 계층에서 마이크로서비스 아키텍처까지 그리고 그 이후
+- 모놀리스 -> 애플리케이션 복잡 & 민천성 요구 -> 마이크로서비스 등장
+- 모놀리스 vs msa  
+![img.png](images/img.png)  
+
+- 마이크로서비스로 변경 실패후, 이에관한 설계 스타일에 대해 여러 말이 있었다.
+  - 마이크로서비스의 복잡성을 줄이고자, **매크로서비스(macroservice)**
+    - `마이크로서비스`의 원래 의도는 **크기에 관한 것이 아님.**
+  - **시타델(citadel) 아키텍처**
+    - 중앙 모놀리스를 두고, 마이크로서비스가 주변을 둘러싼 형태
+  - 모듈식 모놀리스의 형태로 변경 
+- **만병 통치약이나 일률적인 아키텍처 스타일 없다.**
+  - 고객과 비지니스 가치를 전달하는데 올바른 아키텍처가 있을 뿐이다.
+
+> **필자 마이크로서비스 책 추천**
+> - 마이크로서비스 아키텍처 구축, 샘 뉴먼
+> - 마이크로서비스 패턴, 크리스 리처드슨
+> - 스프링 마이크로서비스 코딩 공작소, 존카넬/후알리루포 산체스
+
+### 1.7.2 클라우드 네이티브 애플리케이션을 위한 서비스 기반 아키텍처
+- 우리가 구축할 시스템의 아키텍처는 `서비스`와 `상호작용` 두 가지 요소로 나뉜다. 
+  - `서비스` : 서비스를 제공하는 구성 요소
+  - `상호작용` : 서비스간 통신
+- `서비스`는 **상태를 저장하는지에 따라 분류**할 수 있다.
+  - **애플리케이션 서비스** : 상태를 갖지 않는다.
+  - **데이터 서비스** : 상태를 갖는다.
+
+- `애플리케이션 서비스`
+  - **상태를 갖지 않으며, 논리를 구현**한다.
+  - 느슨한 결합, 높은 응집력을 고려하여 설계해야 한다.
+  - **독립적** 이어야 한다.
+- `데이터 서비스`
+  - **상태를 갖는다.**
+  - DB, redis, mq
+  - 클라우드 제공 서비스 : 다이나모db, 빅쿼리
+- `상호작용`
+  - 이벤트 기반 접근 방식 - 복원력 좋음
+  - 요청/응답 패턴(동기식 http 호출) 
 
 ## 요약
-
-
-
+- `클라우드 네이티브 애플리케이션`은 클라우드를 위해 설계되고, 상주하는 **분산된 시스템이다.**
+- `클라우드`는 상품으로 제공되는 IT인프라이다.
+- `클라우드`는 사용하는 리소스에 대해서만 비용을 지불한다.
+- `클라우드`는 IaaS, CaaS, PaaS, FaaS, SaaS와 같이 추상화 수준에서 서비스를 제공한다.
+- `클라우드 네이티브 애플리케이션`은 수평적 확장, 느슨한 결합, 응집력, 결함에 잘 견디고, 관리 및 **관찰** 가능하다.
+- `클라우드 네이티브`개발은 **자동화**, **지속적 전달**, **데브옵스**에 의해 지원된다.
+- `데브옵스`는 **서로 다른 역할 간의 협업**을 통해 **비지니스 가치를 제공하는 문화**이다.
+- 컨테이너는 `클라우드 네이티브 시스템`을 위한 컴퓨팅 단위로 사용 된다.
+  - 가상머신보다 **가볍고**, **이식성**, **불변성**, **유연성**을 제공한다. (도커)
+- `k8s` 같은 플랫폼을 통해 **컨테이너를 관리**하며, **오케스트레이션**, **클러스터 관리** **네트워크 서비스 및 스케줄링** 한다.
+- `서버리스`는 플랫폼이 서버&인프라 를 관리하고, **개발자는 비지니스 로직에만 집중하는 모델이다.**
+- `마이크로서비스`는 클라우드 네이티브 애플리케이션을 구축하는 데 사용할 수 있지만, 필수 사항은 아니다.
