--- a/ch02[개요-클라우드 네이티브 패턴 및 기술].md
+++ b/ch02[개요-클라우드 네이티브 패턴 및 기술].md
@@ -131,8 +131,98 @@
 - **C4 모델** : 은 소프트웨어 시스템의 아키텍처를 모델링하기 위한 간결한 그래픽 표기법
 
 #### [프로젝트 초기화]
+- 스프링 이니셜라이저
+- 스프링 이니셜라이저 구성 선택사항
+  - 프로젝트 => 메이븐, 그래들
+  - 언어 => 자바, 코틀린, 그루비
+  - 스프링부트 버전
+  - `그룹` => 메이븐 저장소에서 사용하는 프로젝트 **그룹 ID**
+  - `아티팩트` => 메이븐 저장소에서 사용하는 **아티팩트 ID**
+  - `이름` => 프로젝트 이름
+  - 패키지 이름 => 프로젝트의 기본 자바 패키지
+  - `패키징` => **WAR**(애플리케이션 서버에 배포), **JAR**(독자적 애플리케이션)
+  - 자바 => 사용할 자바 버전
+  - 의존 모듈 => 프로젝트에 포함할 의존 모듈/라이브러리
+
+> **그래들 또는 메이븐?**
+> - 메이븐보다 그래들을 선호한다.
+> - 그래들이 병렬적인 빌드 및 캐싱 시스템을 사용하기 때문이다.
+> - 그래들 빌드 언어(DSL)가 메이븐보다 **읽기 쉽고 표현력이 뛰어나며 유지 관리가 쉽다.**
+
 #### [빌드 설정]
+````groovy
+//build.gradle
+plugins {
+	id 'org.springframework.boot' version '2.7.18'
+	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
+	id 'java'
+}
+
+group = 'com.polarbookshop' //카탈로그 서비스 프로젝트의 그룹 ID
+version = '0.0.1-SNAPSHOT'	// 애플리케이션의 버전
+sourceCompatibility = '17' //프로젝트 빌드시 사용할 버전
+
+description = 'Provides functionality for managing the books in the catalog.'
+
+repositories { // 의존 라이브러리를 검색할 아티팩트 저장소
+	mavenCentral()
+}
+
+dependencies {
+	implementation 'org.springframework.boot:spring-boot-starter-web' //웹관련 라이브러리
+	testImplementation 'org.springframework.boot:spring-boot-starter-test' //junit, mokito, assert 포함
+}
+
+tasks.named('test') {
+	useJUnitPlatform()	//Junit5가 제공하는 Junit 플랫폼으로 테스트하도록 설정
+}
+
+//settings.gradle
+rootProject.name = 'catalog-service'    //프로젝트의 이름!
+````
 #### [애플리케이션 부트스트랩]
+- @SpringBootApplication 어노테이션은 아래 세 가지 어노테이션을 포함한다.
+  - @Configuration
+    - 해당 클래스가 빈을 정의하는 클래스임을 나타낸다. 
+  - @ComponentScan
+    - 해당 어노테이션을 사용하면 **컴포넌트 검색을 통해 빈을 찾가 스프링 콘텍스트에 자동으로 등록**한다.
+  - @EnableAutoConfiguration
+    - 스프링 부트에서 제공하는 **자동 설정 기능을 활성화 한다.**
 #### [컨트롤러 구현]
+- @RestController
+  - REST/HTTP 엔드포인트를 위한 핸들러를 정의하는 클래스로 인식
+- @GetMapping
+  - get 요청을 처리
 #### [애플리케이션 테스트]
+- @SpringBootTest 
+  - **스프링부트 애플리케이션을 테스트하기 위한 셋업 제공**
+- @Test
+  - 테스트 케이스를 식별
+
+````shell
+# 테스트 진행!
+./gradlew test
+````
+
+````shell
+# 스프링 부트 실행
+./gradlew bootRun
+````
+
+## Useful Commands
+
+| Gradle Command	         | Description                                   |
+|:---------------------------|:----------------------------------------------|
+| `./gradlew bootRun`        | Run the application.                          |
+| `./gradlew build`          | Build the application.                        |
+| `./gradlew test`           | Run tests.                                    |
+| `./gradlew bootJar`        | Package the application as a JAR.             |
+| `./gradlew bootBuildImage` | Package the application as a container image. |
+
+
+After building the application, you can also run it from the Java CLI:
+```bash
+java -jar build/libs/catalog-service-0.0.1-SNAPSHOT.jar
+```
 #### [애플리케이션 실행]
+![img.png](images/ch02/img.png)
