--- a/ch02[개요-클라우드 네이티브 패턴 및 기술].md
+++ b/ch02[개요-클라우드 네이티브 패턴 및 기술].md
@@ -226,3 +226,26 @@ java -jar build/libs/catalog-service-0.0.1-SNAPSHOT.jar
 ```
 #### [애플리케이션 실행]
 ![img.png](images/ch02/img.png)
+
+
+## 2.3 도커를 통한 애플리케이션 컨테이너화 
+### 2.3.1 도커소개 : 이미지 및 컨테이너
+### 2.3.2 컨테이너를 통한 스프링 애플리케이션의 실행
+````shell
+#컨테이너 이미지 패키징
+./gradlew bootBuildImage
+
+#이미지 확인
+docker images 
+````
+
+#### Container tasks
+= Run Catalog Service as a container
+```bash
+docker run --rm --name catalog-service -p 8080:8080 catalog-service:0.0.1-SNAPSHOT
+# docker run => 이미지에서 컨테이너를 실행한다. 
+# --rm => 실행종료 후 컨테이너를 삭제한다.
+# --name catalog-service => 컨테이너의 이름
+# -p 8080:8080 => 8080포트를 통해 컨테이너 외부로 서비스를 노출한다.
+# catalog-service:0.0.1-SNAPSHOT => 실행할 이미지의 이름과 버전
+```
