--- a/ch02[개요-클라우드 네이티브 패턴 및 기술].md
+++ b/ch02[개요-클라우드 네이티브 패턴 및 기술].md
@@ -228,8 +228,56 @@ java -jar build/libs/catalog-service-0.0.1-SNAPSHOT.jar
 ![img.png](images/ch02/img.png)
 
 
-## 2.3 도커를 통한 애플리케이션 컨테이너화 
+## 2.3 도커를 통한 애플리케이션 컨테이너화
+- 애플리케이션을 컨테이너로 만들어야 하는데 왜 그럴까?
+  - 컨테이너를 사용하면 `주변 환경과의 격리가 가능`하다.
+  - 애플리케이션이 실행할 때 `사용하는 모든 것이 컨테이너 안에 준비`된다.
+  - `의존성`은 **그래들에 의해 관리**된다.
+- 애플리케이션을 컨테이너화 하는것이 의미하는 것!
+  - 어떤 종류의 클라우드 환경이라도 `애플리케이션`이 **독립적**이고 **이식 가능하다**는 것을 의미한다.
+- 리눅스 재단의 프로젝트인 **오픈 컨테이너 이니셔티브(Open Container Initative, OCI)는** **컨테이너 작업을 위한 업계 표준을 정의**한다.
+  - OCI 이미지 사양 => 컨테이너 이미지 `빌드 방법` 정의
+  - OCI 런타임 사양 => 컨테이너 이미지 `실행 방법` 정의
+  - OCI 배포 사양 => 컨테이너 이미지 `배포 방법` 정의
+- 우리는 OCI 사양을 준수하는 **도커**를 사용한다.
+- `도커`(오픈소스)는 애플리케이션을 패키징 및 실행할 수 있는 기능을 제공한다.
+
 ### 2.3.1 도커소개 : 이미지 및 컨테이너
+- **도커 서버**에는 **도커 데몬이 포함**되어 있다.
+- **도커 데몬**은 백그라운드에서 **이미지, 컨테이너, 볼륨, 네트워크 같은 도커 객체를 만들고 관리**한다.
+- **도커 호스트** 란 `도커 서버가 실행되는 컴퓨터`를 말한다.
+- **도커 클라이언트**를 통해 `도커 데몬`은 API를 제공한다(컨테이너 실행, 볼륨 생성 등)
+  - `도커 클라이언트`는 **명령어 기반**이며, 도커 컴포즈와 같은 **스크립트 방식 사용**
+  - 또한, 도커 명령어 인터페이스를 통해 도커 데몬과 상호작용하면서 명령을 전달한다.
+- **도커 컨테이너 저장소**가 있는데 메이븐 저장소와 비슷한 기능을 갖는다.
+  - 컨테이너 이미지에 대해 동일한 일을 수행하고 OCI 배포 사양을 따른다.
+  - `컨테이너 저장소`는 **공용 저장소**와 **사설 저장소**로 구분된다.
+- **컨테이너 이미지**는 내부에서 애플리케이션을 실행하는 데 필요한 모든것을 포함하는 **실행 가능한 경량 패키지**
+  - 그 중 **도커 이미지 형식**은 컨테이너 이미지를 만드는 데 `가장 많이 사용`된다.
+  - OCI 이미지는 Dockerfile에서 명령을 정의하여 원하는 이미지를 만들 수 있다.
+- **컨테이너**는 `컨테이너 이미지의 실행 가능한 인스턴스`다.
+  - 도커 CLI, 도커 컴포즈를 통해 **컨테이너의 라이프사이클을 관리할 수 있다.**
+  - **포트 포워딩이**나 **포트매핑**을 할 수 있다.
+
+
+#### 도커
+![img.png](images/ch02/img_1.png)  
+출처 : 클라우드 네이티브 스프링 인 액션  
+
+
+#### [도커 명령어]
+|    Docker Command	    |             Description              |
+|:---------------------:|:------------------------------------:|
+|    `docker images`    |              이미지를 보여준다.           |
+|      `docker ps`      |           실행중인 컨테이너를 보여준다.      |
+|    `docker ps- a`     |    생성되거나 시작되거나 중지된 컨테이너를 모두 보여준다.    |
+| `docker run <image>`  |       지정된 이미지를 가지고 컨테이너를 실행한다.       |
+| `docker start <name>` |            기존 컨테이너를 시작한다.            |
+| `docker stop <name>`  |          실행 중인 컨테이너를 중지한다.           |
+| `docker logs <name>`  |        지정된 컨테이너로부터 로그를 출력한다.         |
+|  `docker rm <name>`   |           중지된 컨테이너를 삭제한다.            |
+|  `docker rm <image>`  |              이미지를 삭제한다.              |
+
 ### 2.3.2 컨테이너를 통한 스프링 애플리케이션의 실행
 ````shell
 #컨테이너 이미지 패키징
@@ -249,3 +297,169 @@ docker run --rm --name catalog-service -p 8080:8080 catalog-service:0.0.1-SNAPSH
 # -p 8080:8080 => 8080포트를 통해 컨테이너 외부로 서비스를 노출한다.
 # catalog-service:0.0.1-SNAPSHOT => 실행할 이미지의 이름과 버전
 ```
+
+## 2.4 쿠버네티스로 컨테이너 관리
+- **쿠버네티스**(k8s)는 컨테이너 애플리케이션의 `배포`, `확장` , `관리`를 **자동화**하기 위한 **오픈소스 시스템**이다.
+- **k8s**는 여러 머신으로 구성된 클러스터로 배포시, 우리를 대신해서 클러스터를 관리해준다.
+- 컨테이너의 배포대상은 한대의 머신이지만, **오케스트레이터의 경우 클러스터**다.
+  ````
+  컨에이너 구성
+  <컨테이너> -- 배포 --> vm
+  
+  오케스트레이션 구성
+  <컨테이너> -- 배포 --> vm vm
+                     vm vm
+  ````
+
+
+### 2.4.1 쿠버네티스 소개 : 배포, 파드, 서비스
+- **쿠버네티스**는 CNCF가 관리하는 오픈소스 컨테이너 오케스트레이터다.
+  - **컨테이너 오케스트레이션에서 표준으로 자리잡고 있다.**
+- `k8s 클러스터`란?
+  - **컨테이너화된 애플리케이션을 실행하는 작업 머신의 집합**이다.
+  - **각 작업자 머신**을 `노드` 라고 한다.
+- `k8s 클러스터`에는 **작업자 노드(worker node)라고** 부르는 머신이 여러대 존재할 수 있다.
+  - 이 작업자 노드에 **컨테이너화된 애플리케이션이 배포**된다.
+  - 컨테이너가 실행하고 네트워크에 연결할 수 있도록 `작업자 노드`는 **CPU, 메모리, 네트워크, 스토리지 등을 제공**한다.
+- **컨트롤 플레인(control plane)은** 작업자 노드를 관리하는 **컨테이너 오케스트레이션 계층**이다.
+  - 컨테이너 라이프사이클 정의, 배포, 관리 한다.
+  - 클러스터 관리, 스케줄링, 상태 모니터링을 진행 한다.
+- 클라이언트인 **kubectl**을 통해 쿠버네티스와 상호작용이 이루어 진다.
+- **kubectl**은 `컨트롤 플레인과의 통신을 통해 작업자 노드에서 작업을 수행`한다.
+  - `클라이언트`는 **작업자 노드와 직접 연결 하지 않는다.**
+
+#### [k8s 주요 구성 요소]
+  ````
+  쿠버네티스 클라이언트          
+  - k8s CLI          ===>  k8s 컨트롤 플레인 ===>                   K8s 작업자 노드 
+   > kubectl create                               파드(instnce)   파드(instnce)   파드(instnce)
+   > kubectl get
+   > kubectl delete 
+  ````
+![img.png](images/ch02/img_1.png)  
+출처 : https://www.youtube.com/watch?app=desktop&v=TlHvYWVUZyc
+- **파드(pod)**
+  - **가장 작은 배포 단위**로 `하나 이상의 컨테이너를 포함`할 수 있다.
+  - 일반적으로 하나의 파드에는 애플리케이션이 하나만 있다.
+  - **k8s**는 컨테이너를 직접관리하지 않고 `파드를 관리`한다.
+- **배포(deployment)**
+  - `배포 객체를 통해` 애플리케이션에 대해 **원하는 배포 상태를 쿠버네티스에 알린다.**
+  - 배포를 통해 `여러개의 파드`를 **하나의 집합체로 관리**하는 것이 가능하다.
+- **서비스(service)**
+  - `서비스 정의`를 통해 배포(파드의 집합)은 클러스터 내의 **다른 노드나 외부로 노출**된다.
+- k8s 객체에 대해, **리소스 매니페스트(resource manifest)** 를 정의할 수 있다.
+  - 이것은 **애플리케이션에 대해 원하는 상태를 기술하는 파일**이다.
+  - ex) 5개를 복제해서 8080 포트를 통해 외부로 노출되어야 한다를 명시
+  - **yaml** 파일을 사용해 작성된다.
+  - kubectl 클라이언트를 사용 => `컨트롤플레인`에게 **manifest 명세대로 리소스를 생성하도록 요청**한다.
+  - `컨트롤플레인` => manifest 명세된 이미지를 가져오기 위해 **컨테이너 저장소를 사용**
+
+### 2.4.2 쿠버네티스에서 스프링 애플리케이션 실행
+- 이제 쿠버네티스를 사용해 클러스터에 배포할 때가 왔다!
+- 이미 로컬 환경에서 클러스터가 실행되고 있고, 필요한 것은 **리소스 매니페스트 파일**이다.
+  - yaml 또는 json 파일에 선언적 명령어를 정의하는 것이다(7장에서 배울예정)
+- 첫째로, `컨테이너 이미지`로 카탈로그 서비스를 배포하도록 **쿠버네티스에 명령**해야 한다.
+````bash
+# 도커 허브 레지스트리에서 이미지를 가져오는게 default,
+# 어쩔수 없이, 해당 이미지는 수동작업으로 로컬 클러스터로 로드시켜야한다.
+# 로드 명령어 
+minikube image load catalog-service:0.0.1-SNAPSHOT 
+````
+
+## Kubernetes tasks
+
+### Create Deployment for application container
+
+```bash
+# kubectl create : 쿠버네티스 리소스 생성
+# deployment : 생성할 리소스 유형
+# catalog-service : 배포 이름
+# --image=catalog-service:0.0.1-SNAPSHOT : 실행할 이미지의 이름과 버전
+kubectl create deployment catalog-service --image=catalog-service:0.0.1-SNAPSHOT
+```
+- `kubectl get deployment`
+  - 배포 객체가 잘 생성됐는지 확인
+  ![img.png](images/ch02/img_3.png)  
+- `kubectl get pod`
+  - 배포 생성 명령을 실행시, **내부적으로 배포 리소스에 정의된 애플리케이션용 파드가 만들어진다.**
+  ![img.png](images/ch02/img_4.png)  
+
+### Create Service for application Deployment
+
+```bash
+# kubectl expose : 쿠버네티스 리소스를 노출한다.
+# deployment : 노출할 리소스의 유형
+# catalog-service : 노출할 배포의 이름
+# --name=catalog-service : 서비스 이름 
+# --port=8080 : 서비스를 노출할 포트 번호
+kubectl expose deployment catalog-service --name=catalog-service --port=8080
+```
+- `kubectl get service catalog-service`
+  - 서비스가 잘 생성됐는지 확인
+    ![img.png](images/ch02/img_5.png)  
+
+### Port forwarding from localhost to Kubernetes cluster
+
+```bash
+# kubectl port-forward : 포트 포워딩 명령
+# service/catalog-service : 노출할 리소스
+# 8000 => 로컬 호스트의 포트 
+# :8080 => 서비스 포트
+kubectl port-forward service/catalog-service 8000:8080
+```
+- 포트포워딩 확인
+  ![img.png](images/ch02/img_6.png)  
+
+- 쿠버네티스를 사용해 애플리케이션을 클러스터에 배포 완료!
+  ![img.png](images/ch02/img_7.png)
+
+### Delete Deployment for application container
+
+```bash
+kubectl delete deployment catalog-service
+```
+
+### Delete Service for application container
+
+```bash
+kubectl delete service catalog-service
+```
+
+#### [k8s 명령어]
+|                           k8s CLI 명령	                           |          Description         |
+|:---------------------------------------------------------------:|:----------------------------:|
+|                    `kubectl get deployments`                    |        모든 배포 객체를 보여준다.       |
+|                        `kubectl get pod`                        |         모든 파드를 보여준다.         |
+|                        `kubectl get svc`                        |         모든 서비스를 보여준다.        |
+|                     `kubectl logs <pod_id>`                     |       지정한 파드의 로그를 보여준다.      |
+|               `kubectl delete deployment <name>`                |       지정한 배포 객체를 삭제한다.       |
+|                   `kubectl delete pod <name>`                   |         지정한 파드를 삭제한다.        |
+|                 `kubectl delete svc <service>`                  |        지정한 서비스를 삭제한다.        |
+| `kubectl port-forward svc <service> <host-port>:<cluster:port>` | 자신의 로컬 컴퓨터에서 클러스터로 트래픽을 보낸다. |
+
+#### [minikube]
+|                k8s CLI 명령	                 |            Description             |
+|:------------------------------------------:|:----------------------------------:|
+|              `minikube start`              |                 시작                 |
+|     `minikube image ls --format table`     |     minikube 에서 이용 가능한 이미지 조회      |
+| `minikube image load [imageName:tagName]`  |       minikube 에 이미지 push 하기       |
+
+
+## 2.5 폴라 북숍 : 클라우드 네이티브 애플리케이션
+### 2.5.1 시스템 요구 사항 이해
+### 2.5.2 프로젝트에서 사용되는 패턴과 기술
+
+#### 1. 웹과 상호작용
+#### 2. 데이터
+#### 3. 설정
+#### 4. 라우팅
+#### 5. 관측 가능성
+#### 6. 복원력
+#### 7. 보안
+#### 8. 테스트
+#### 9. 빌드 및 배포
+#### 10. UI
+
+## 요약
+
+
