--- a/ch02[개요-클라우드 네이티브 패턴 및 기술].md
+++ b/ch02[개요-클라우드 네이티브 패턴 및 기술].md
@@ -446,20 +446,65 @@ kubectl delete service catalog-service
 
 
 ## 2.5 폴라 북숍 : 클라우드 네이티브 애플리케이션
+- 구현에 사용할 주요 기술과 패턴을 살펴볼 것이다.
 ### 2.5.1 시스템 요구 사항 이해
+- 확장성 & 복원력 필수적이다.
 ### 2.5.2 프로젝트에서 사용되는 패턴과 기술
-
 #### 1. 웹과 상호작용
+- 동기식 HTTP통신, 넌블로킹 방식(리액티브 프로그래밍)으로 구축
+  - 스프링 MVC, spring webflux
+- 동기식 통신은 하나의 기능을 수행하기위해 연관된 서비스가 많을수록 문제를 일으킨다.
+  - **이벤트 기반 프로그래밍**을 통해 이를 해결할 수 있다.
+- `스프링 클라우드 스트림`(Spring cloud stream)를 통해 서비스간 데이터 흐름을 구현.
+- `스프링 클라우드 함수`(Spring cloud function)을 사용해 메시지 처리를 위한 함수 정의.
+
 #### 2. 데이터
+- 스프링 데이터 **JDBC**, **R2DBC**를 활용 예정
+- `레디스`를 통해 **세션 데이터를 외부 데이터 저장소에 저장** => **상태를 갖지 않고 확장 가능**
+  - **스프링 세션**(Spring Session)을 사용
+  - 특히, **스프링 세션 데이터 레디스(Spring Session Data Redis)를** 활용할 예정이다.
+
 #### 3. 설정
+- **스프링 클라우드 컨피그(Spring Cloud Config)를** 통해 `설정관리`를 `중앙 집중화`
+- k8s `컨피그맵`, `시크릿` 사용법 배울 예정
+
 #### 4. 라우팅
+- 북숍은 분산 시스템이기 때문에 **라우팅(routing)설정**이 필요하다.
+- k8s는 **서비스 디스커버리 기능이 내장**되어 있어, 이를 통해 **서비스는** 물리적 주소나 호스트 이름과는 독립적으로 존재할 수 있다.
+- **스프링 클라우드 게이트웨이**(Spring Cloud Gateway)를 이용해 API게이트웨이 서비스를 구현할 것이다.
+  - `보안`, `복원력`, `공통`으로 발생하는 이슈를 처리하는 **에지 서비스**
+  - 폴라 북숍의 진입점이 되므로 **고가용성**, **고성능**, **내구성**을 갖춰야 한다.
+
 #### 5. 관측 가능성
+- 클라우드 네이티브 조건을 만족하려면 **관측 가능성(observability)를 제공**해야 한다.
+  - `spring boot Actuator 를 통해 health, 정보 설정` => `마이크로미터(Micrometer)에 측정값 제공` => `프로메테우스가 처리` => `그라파냐 시각화`
+  - 하나 이상의 서비스에서 처리될 수 있어, **분산 추적**이 필요하다. => `오픈텔레메트리`를 통해 설정 => `그라파냐 템포`를 통해 **트레이스 데이터를 가져와 처리 및 시각화**
+  - 로그 전략
+    - `플루언트 비트(Fluent Bit)를 통해 로그를 수집` => `로키(loki)를 사용해 로그를 저장 및 처리` => `그라파냐 로그 검색 처리`
+
 #### 6. 복원력
+- 클라우드 네이티브 애플리케이션은 **복원력(resilience)가** 필요하다.
+  - 리액터, 서킷브레이커, 재시도, 타임아웃, 기타패턴 구현
+
 #### 7. 보안
+- **인증 및 권한 부여 기능을 추가하는 방법을 보여줄 것이다.**
+- `OAuth 2.1` 및 `오픈아이디 커넥트`
+  - 스프링 시큐리티는 이들 표준을 지원한다.
+  - `키클록(Keycloak)`을 사용해 신원 및 액세스 제어를 수행할 것이다.
+
 #### 8. 테스트
+- Junit5를 사용해 단위 테스트 작성 방법을 살펴본다.
+  - `REST 엔드포인트`, `메시징 스트림`, `데이터 통합` 및 `보안`을 포함한 테스트
+
 #### 9. 빌드 및 배포
+- 스프링 네이티브(Spring Native) 및 그랄VM(GraalVM)을 사용해 이미지로 컴파일 => 서버리스 아키텍처 경험
+- 그 이후, k8s에 케이네이티브를 사용해 배포할 예정이다.
+- 깃허브 액션(Github Actions)를 통해 빌드 파이프라인 자동화
+  - 매번 커밋시 빌드 및 테스트, 배포 가능한 패키지 생성
+  - 깃옵스, 아르고 CD를 사용해 k8s 클러스터에 배포를 자동화
+
 #### 10. UI
+- 앵귤러 프레임워크 사용
 
 ## 요약
-
 
