--- a/ch03[클라우드 네이티브 개발 시작].md
+++ b/ch03[클라우드 네이티브 개발 시작].md
@@ -62,7 +62,15 @@
 #### 3. 데이터 액세스를 위해 리포지터리 추상화
 #### 4. 도메인 오류를 알리기 위한 예외의 사용
 
+### 3.3.2 스프링 MVC를 이용한 REST API 구현
+### 3.3.3 데이터 유효성 검사 및 오류 처리
+### 3.3.4 미래 요구 사항을 위해 진화하는 API
 
+## 3.4 스프링 RESTful 애플리케이션 테스트
+### 3.4.1 JUnit5를 이용한 단위 테스트
+### 3.4.2 @SpringBootTest를 통한 통합테스트
+### 3.4.3 @WebMvcTest를 사용한 REST 컨틀롤러의 테스트
+### 3.4.4 @JsonTest를 사용한 JSON 직렬화 테스트
 
 
 
