--- a/ch03[클라우드 네이티브 개발 시작].md
+++ b/ch03[클라우드 네이티브 개발 시작].md
@@ -49,6 +49,18 @@
   - 인스턴스를 더 많이 배포해 워크로드를 분산하는 것을 선호한다.
 
 ### 3.2.1 실행 가능한 JAR 및 임베디드 서버 
+- 전통적인 접근법과 클라우드 네이티브 접근법의 차이점 중 하나는 애플리케이션을 `패키징`하고 `배포`하는 **방법**이다.
+  - 전통적 : 애플리케이션 서버나 독립형 웹 서버가 사용됐다. => EAR, WAR 배포
+    - 서버 수준에서 무언가 변경해야 한다면, 다른 팀과 조정되어야 하기 때문에 `민첩성`과 `변경`에 **제한**이 있다.
+    - 서버 유형에따라 달라질 수 있기 떄문에, `이식성`이 제한된다.
+- 클라우드 네이티브 애플리케이션
+  - `독립적`이어야 하며, **서버에 의존하지 않는다.**
+  - 서버 기능은 `애플리케이션` 자체에 포함되어 조달된다.
+    - 스프링 부트 `서버 기능` 내장, **외부 의존성 제거**하고, **독립 실행형**으로 만든다.
+    - 스프링 부트에는 `톰캣`서버가 미리 설정되어 번들로 제공되지만, **언더토**, **제티**, **네티**로 대체될 수 있다.
+  - `서버 의존성 문제`를 해결 되었으니, 애플리케이션을 패키징하는 방법 역시 변경해야 한다.
+    - JVM 생태계에서 클라우드 네이티브 애플리케이션은 `JAR 아티팩트로 패키징`된다.
+    - 
 ### 3.2.2 요청당 스레드 모델 이해
 ### 3.2.3 내장 톰캣 설정
 #### 1. HTTP 포트
