--- a/ch03[클라우드 네이티브 개발 시작].md
+++ b/ch03[클라우드 네이티브 개발 시작].md
@@ -60,14 +60,60 @@
     - 스프링 부트에는 `톰캣`서버가 미리 설정되어 번들로 제공되지만, **언더토**, **제티**, **네티**로 대체될 수 있다.
   - `서버 의존성 문제`를 해결 되었으니, 애플리케이션을 패키징하는 방법 역시 변경해야 한다.
     - JVM 생태계에서 클라우드 네이티브 애플리케이션은 `JAR 아티팩트로 패키징`된다.
-    - 
+
+````bash
+# jar 패키징
+./gradlew bootJar
+# 실행
+java -jar build/libs/catalog-service-0.0.1-SNAPSHOT.jar
+````
+
 ### 3.2.2 요청당 스레드 모델 이해
+- `톰캣`과 같은 서블릿 컨테이너에서 실행되는 어플리케이션은 `요청당 스레드(thread-per-request) 모델`을 기반으로 **요청을 처리**한다.
+  - 요청에 대한 응답이 클라이언트에 반환될 때까지 이 스레드는 반환되지 않는다.
+  - I/O 와 같은 집약적인 작업이 수행되면 이 작업이 완료될 때까지 스레드를 차단한다.
+- `톰캣`은 스레드 풀을 초기화해서 가지고 있다.
+  - 모든 HTTP 요청은 이 스레드 풀을 통해 관리한다.
+  - 새로운 요청이 들어왔는데 `모든 스레드가 사용 중`이면 그 요청은 `큐`로 들어가 **스레드 하나가 사용 가능한 상태로 풀릴 때까지 기다린다.**
+- `전통적인 애플리케이션`에서는 특정 인스턴스에 더 많은 리소스를 추가한다.
+- `클라우드 네이티브 애플리케이션`에서는 **수평적 확장** 및 **더 많은 복제본을 배포**한다.
+
 ### 3.2.3 내장 톰캣 설정
 #### 1. HTTP 포트
+- 기본 default 내장서버는 8080포트이다.
+- 포트를 지정할 수 있다.
+````yaml
+server:
+  port: 9001
+````
 #### 2. 연결 타임아웃
+- **server.tomcat.connection-timeout** 
+  - `tcp 연결 수락`, http 요청을 받기까지 **톰캣이 최대한 기다리는 시간**
+  - 서비스 거부 공격(DoS attack)을 방지하는데 도움이 된다.
+  - 클라우드에 고도로 분산된 시스템 관점으로 본다면, 연쇄적으로 실패하는 상황을 고려해야한다.
+- **server.tomcat.keep-alive-timeout**
+  - HTTP요청을 기다리는 동안 연결을 유지하는 시간을 설정할 수 있다.
+````yaml
+server:
+  port: 9001
+  tomcat:
+    connection-timeout: 2s 
+    keep-alive-timeout: 15s
+    threads:
+      max: 50
+      min-spare: 5
+````
 #### 3. 스레드 풀
+- `톰캣`은 요청당 스레드 모델에 따라 요청을 처리하는 `스레드 풀(thread pool)`을 가지고 있다.
+- **server.tomcat.threads.max** 속성을 통해, `최대 요청 처리 스레드 수를 설정`할 수 있다.
+- **server.tomcat.threads.max** 속성을 통해, `최소의 스레드 수`를 정의할 수 있다.
+  - 톰캣이 시작할 때 정의한 갯수 만큼의 스레드가 풀에 생성된다.
+- `스레드 풀`에 대한 최상의 설정을 위한 마법같은 공식은 없다.
+  - 모니터링을 통해 다양한 설정 값을 시도해봐야 한다.
+  - `최대` 200, `최소` 10 이다.
 
 ## 3.3 스프링 MVC를 이용한 RESTful 애플리케이션 구축
+
 ### 3.3.1 REST API를 먼저, 비지니스 로직은 그다음
 #### 1. 도메인 개체 정의
 #### 2. 사용 사례 구현
