--- a/ch03[클라우드 네이티브 개발 시작].md
+++ b/ch03[클라우드 네이티브 개발 시작].md
@@ -113,16 +113,187 @@ server:
   - `최대` 200, `최소` 10 이다.
 
 ## 3.3 스프링 MVC를 이용한 RESTful 애플리케이션 구축
-
+- 클라우드 네이티브 애플리케이션을 구축하면 상호작용하는 여러 마이크로서비스로 구성된 `분산 시스템`을 개발할 가능성이 높다.
+- 15요소 방법론은 `API 우선 패턴`을 **권장**한다.
+  - **서비스 인터페이스를 먼저 결정**하고, **구현 작업은 나중에** 수행
+  - `API`는 애플리케이션과 사용자 간의 **공개적인 계약**을 의미하며, **최우선으로 정의**해야 한다.
+- `API 우선 원칙을 채택`하면 미래의 요구 사항에 맞춰 적응하기 쉽다.
 ### 3.3.1 REST API를 먼저, 비지니스 로직은 그다음
+- API를 먼저 설계한다는 것은 요구 사항을 이미 정의했다고 가정하는 것이다.
+
+#### REST API
+
+| Endpoint	      | Method   | Req. body  | Status | Resp. body     | Description    		   	     |
+|:---------------:|:--------:|:----------:|:------:|:--------------:|:-------------------------------|
+| `/books`        | `GET`    |            | 200    | Book[]         | Get all the books in the catalog. |
+| `/books`        | `POST`   | Book       | 201    | Book           | Add a new book to the catalog. |
+|                 |          |            | 422    |                | A book with the same ISBN already exists. |
+| `/books/{isbn}` | `GET`    |            | 200    | Book           | Get the book with the given ISBN. |
+|                 |          |            | 404    |                | No book with the given ISBN exists. |
+| `/books/{isbn}` | `PUT`    | Book       | 200    | Book           | Update the book with the given ISBN. |
+|                 |          |            | 200    | Book           | Create a book with the given ISBN. |
+| `/books/{isbn}` | `DELETE` |            | 204    |                | Delete the book with the given ISBN. |
+
+> API 문서화
+> - API 문서화는 API 우선 접근법을 따를 때 필수적이다.
+> - 스프링 생태계에서는 주로 두 가지가 가능하다.
+>   - TDD를 통해 REST API를 문서화하는 데 도움이 되도록 **Spring REST Docs** 를 제공한다.
+>   - **springdoc-openapi**라는 것을 사용하면 오픈API 3형식에 따라 API 문서 생성을 자동화하는데 도움이 된다. 
+
+- `개체(entity)`
+  - `책`처럼, 한 도메인에서 명사를 나타낸다.
+- `서비스(service)`
+  - 서비스는 도메인에 대한 사용 사례를 정의하고 구현한다.
+    - ex) 카탈로그에 책을 추가
+- `리포지터리(repository)`
+  - 도메인 계층으로 하여금 데이터 소스와 독립적으로 데이터에 액세스 하기 위한 추상화 계층
+
 #### 1. 도메인 개체 정의
+````java
+public record Book (//도메인 모델은 불가변 객체인 레코드로 구현된다.
+    String isbn,    //고유하게 식별
+    String title,
+    String author,
+    Double price
+){}
+````
 #### 2. 사용 사례 구현
+````java
+@Service
+public class BookService {
+  private final BookRepository bookRepository;
+  public BookService(BookRepository bookRepository) {
+    this.bookRepository = bookRepository;
+  }
+  ...
+}
+````
 #### 3. 데이터 액세스를 위해 리포지터리 추상화
+````java
+public interface BookRepository {
+	Iterable<Book> findAll();
+	Optional<Book> findByIsbn(String isbn);
+	boolean existsByIsbn(String isbn);
+	Book save(Book book);
+	void deleteByIsbn(String isbn);
+
+}
+@Repository
+public class InMemoryBookRepository implements BookRepository {
+  private static final Map<String, Book> books = new ConcurrentHashMap<>();
+  @Override
+  public Iterable<Book> findAll() {
+    return books.values();
+  }
+  ....
+}    
+````
 #### 4. 도메인 오류를 알리기 위한 예외의 사용
+````java
+public class BookAlreadyExistsException extends RuntimeException {
+    public BookAlreadyExistsException(String isbn) {
+        super("A book with ISBN " + isbn + " already exists.");
+    }
+}
+public class BookNotFoundException extends RuntimeException {
+  public BookNotFoundException(String isbn) {
+    super("The book with ISBN " + isbn + " was not found.");
+  }
+}
+````
 
 ### 3.3.2 스프링 MVC를 이용한 REST API 구현
+````java
+@RestController
+@RequestMapping("books")
+public class BookController {
+  private final BookService bookService;
+
+  public BookController(BookService bookService) {
+    this.bookService = bookService;
+  }
+
+  @GetMapping
+  public Iterable<Book> get() {
+    return bookService.viewBookList();
+  }
+
+  @GetMapping("{isbn}")
+  public Book getByIsbn(@PathVariable String isbn) {
+    return bookService.viewBookDetails(isbn);
+  }
+
+  @PostMapping
+  @ResponseStatus(HttpStatus.CREATED)
+  public Book post(@Valid @RequestBody Book book) {
+    return bookService.addBookToCatalog(book);
+  }
+
+  @DeleteMapping("{isbn}")
+  @ResponseStatus(HttpStatus.NO_CONTENT)
+  public void delete(@PathVariable String isbn) {
+    bookService.removeBookFromCatalog(isbn);
+  }
+
+  @PutMapping("{isbn}")
+  public Book put(@PathVariable String isbn, @Valid @RequestBody Book book) {
+    return bookService.editBookDetails(isbn, book);
+  }
+}
+````
 ### 3.3.3 데이터 유효성 검사 및 오류 처리
+````text
+- ISBN은 올바른 형식으로 정의되어야 한다.
+- 제목은 반드시 있어야 한다.
+- 저자는 반드시 있어야 한다.
+- 가격은 반드시 있어야 하고 0보다 큰 값이어야 한다.
+````
+- `자바 빈 유효성 검사(Java Bean Validation)`는 **애너테이션을 통해 자바 객체에 대한 제약 조건 및 유효성 검사** 규칙을 위해 사용된다.
+  ````yaml
+  dependencies {
+      implementation 'org.springframework.boot:spring-boot-starter-validation'
+  }
+  ````
+  ````java
+  public record Book (
+    
+    @NotBlank(message = "The book ISBN must be defined.")
+    @Pattern(regexp = "^([0-9]{10}|[0-9]{13})$", message = "The ISBN format must be valid.")
+    String isbn,
+
+    @NotBlank(message = "The book title must be defined.")
+    String title,
+
+    @NotBlank(message = "The book author must be defined.")
+    String author,
+
+    @NotNull(message = "The book price must be defined.")
+    @Positive(message = "The book price must be greater than zero.")
+    Double price
+    
+  ){}
+  //@Valid 어노테이션과 함께 사용한다.
+  ````
+- @RestControllerAdvice 클래스는 예외와 상태 코드간 매핑을 제공한다.
+  ````java
+  @RestControllerAdvice
+  public class BookControllerAdvice {
+      @ExceptionHandler(BookNotFoundException.class)
+      @ResponseStatus(HttpStatus.NOT_FOUND)
+      String bookNotFoundHandler(BookNotFoundException ex) {
+          return ex.getMessage();
+      }
+      ...
+  }
+
+  ````
 ### 3.3.4 미래 요구 사항을 위해 진화하는 API
+- `분산 시스템`에서는 **다른 애플리케이션의 기능에 악영향을 미치지 않고 API를 변경하고 발전해나갈 수 있는 계획이 필요**하다.
+  - 가장 좋은 방법은 `API를 이전 버전과 호환되게 변경`하는 것이다.
+  - 변경을 가해야 할때는, `API 버저닝`을 사용할 수 있다.
+    - /v2/books 나, http 헤더로 지정할 수 있다. => `클라이언트 쪽 변경 필요`
+  - 다른 접근법은 클라이언트가 API 변경에 탄력적으로 대응하도록 만드는데 중점을 둔다.
+    - REST아케텍처의 **하이퍼미디어를 사용** => `HATEOAS` 라고 불리기도 한다.
 
 ## 3.4 스프링 RESTful 애플리케이션 테스트
 ### 3.4.1 JUnit5를 이용한 단위 테스트
@@ -130,6 +301,11 @@ server:
 ### 3.4.3 @WebMvcTest를 사용한 REST 컨틀롤러의 테스트
 ### 3.4.4 @JsonTest를 사용한 JSON 직렬화 테스트
 
+## 3.5 배포 파이프라인: 빌드 및 테스트
+### 3.5.1 배포 파이프라인의 커밋 단계 이해
+### 3.5.2 깃허브 액션을 이용한 커밋 단계 구현
+
+## 요약
 
 
 ## Useful Commands
