Update ch03[클라우드 네이티브 개발 시작].md

--- a/ch03[클라우드 네이티브 개발 시작].md
+++ b/ch03[클라우드 네이티브 개발 시작].md
@@ -242,12 +242,12 @@ public class BookController {
 }
 ````
 ### 3.3.3 데이터 유효성 검사 및 오류 처리
-````text
+✔ 도메인 규칙
 - ISBN은 올바른 형식으로 정의되어야 한다.
 - 제목은 반드시 있어야 한다.
 - 저자는 반드시 있어야 한다.
 - 가격은 반드시 있어야 하고 0보다 큰 값이어야 한다.
-````
+
 - `자바 빈 유효성 검사(Java Bean Validation)`는 **애너테이션을 통해 자바 객체에 대한 제약 조건 및 유효성 검사** 규칙을 위해 사용된다.
   ````yaml
   dependencies {
