--- a/ch03[클라우드 네이티브 개발 시작].md
+++ b/ch03[클라우드 네이티브 개발 시작].md
@@ -296,10 +296,163 @@ public class BookController {
     - REST아케텍처의 **하이퍼미디어를 사용** => `HATEOAS` 라고 불리기도 한다.
 
 ## 3.4 스프링 RESTful 애플리케이션 테스트
+- 고품질 소프트웨어를 작성하려면 **자동화된 테스트가 가장 중요**하다.
+  - 클라우드 네이티브 방식을 통해 이루고자 하는 목표 중 하나는 `속도`이다.
+- `자동화`된 테스트가 있다면, 리팩터링을 두려움 없이 할 수 있다.
+- 테스트 커버리지를 최대로 하는 것을 목표로 하기보다는, `의미 있는 테스트를 작성`하도록 해야 한다.
+  - ex) getter setter 테스트는 무의미하다.
+- `TDD`는 소프트웨어를 신속하고 안정적이며 안전하게 배포하는 목표를 달성하는 데 도움이 된다.
+  - 필자는 TDD를 채택할 것을 추천한다.
+- 자동화된 테스트를 통해 새로 추가된 기능 테스트 + 기존 기능 테스트 확인 => `회귀 테스트`를 의미한다.
+- 브라이언 매릭의 `애자일 테스팅 사분면`
+  - 기능 수용 테스트
+  - 탐색적 테스트
+  - 단위테스트, 통합테스트, 시스템 테스트 => `책에서 주로 다룰 내용`
+  - 비기능 수용 테스트
+
 ### 3.4.1 JUnit5를 이용한 단위 테스트
+- spring-boot-starter-test 의존성
+````java
+class BookValidationTests {
+
+  private static Validator validator;
+
+  @BeforeAll
+  static void setUp() {
+    ValidatorFactory factory = Validation.buildDefaultValidatorFactory();
+    validator = factory.getValidator();
+  }
+  
+  @Test
+  void whenIsbnNotDefinedThenValidationFails() {
+    var book = new Book("", "Title", "Author", 9.90);
+    Set<ConstraintViolation<Book>> violations = validator.validate(book);
+    assertThat(violations).hasSize(2);
+    List<String> constraintViolationMessages = violations.stream()
+            .map(ConstraintViolation::getMessage).collect(Collectors.toList());
+    assertThat(constraintViolationMessages)
+            .contains("The book ISBN must be defined.")
+            .contains("The ISBN format must be valid.");
+  }
+  ...
+}
+````
 ### 3.4.2 @SpringBootTest를 통한 통합테스트
+- spring-boot-starter-test 의존성
+- @SpringBootTest 어노테이션
+  - `애플리케이션 콘텍스트를 자동으로 부트스트랩`하기 위해 사용된다. 
+  - webEnvironment 속성
+    - MOCK
+    - RANDOM_PORT
+    - DEFINED_PORT
+    - NONE
+````java
+@SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT)
+class CatalogServiceApplicationTests {
+
+  @Autowired
+  private WebTestClient webTestClient;
+
+  @Test
+  void whenPostRequestThenBookCreated() {
+    var expectedBook = new Book("1231231231", "Title", "Author", 9.90);
+
+    webTestClient
+            .post()
+            .uri("/books")
+            .bodyValue(expectedBook)
+            .exchange()
+            .expectStatus().isCreated()
+            .expectBody(Book.class).value(actualBook -> {
+              assertThat(actualBook).isNotNull();
+              assertThat(actualBook.isbn()).isEqualTo(expectedBook.isbn());
+            });
+  }
+}
+````
+````shell
+# 테스트 실행
+./gradlew test --tests CatalogServiceApplicationTests
+````
+
 ### 3.4.3 @WebMvcTest를 사용한 REST 컨틀롤러의 테스트
+- 어떤 통합 테스트는 애플리케이션 콘텍스트가 필요하지 않을 수도 있다.
+  - 데이터 계층 테스트시, 웹 구성 요소를 로드할 필요 없다.
+  - 웹 구성요소 테스트시, 데이터 계층을 로드할 필요 없다.
+- `슬라이스 테스트(slice test)`는 @SpringBootTest를 사용하지 않는다.
+  - 웹 MVC, 웹플럭스, REST 클라이언트, JDBC, JPA, 몽고, 레디스 등 특정 부분을 위한 전용 애너테이션을 사용한다.
+  - 특정 슬라이스만 포함하고 다른 빈은 갖지 않는 `애플리케이션 콘텍스트`를 초기화 한다.
+- `@WebMvcTest` 애너테이션
+  - 모의 웹 환경에서 스프링 MVC 테스트 => @RestController, @RestControllerAdvice
+````java
+@WebMvcTest(BookController.class)
+class BookControllerMvcTests {
+
+  @Autowired
+  private MockMvc mockMvc;//tomcat을 로드하지 않고 엔드포인트를 테스트할 수 있다. => 경량
+
+  @MockBean
+  private BookService bookService;//실제 객체가아닌, 목 객체로 의존성을 주입한다.
+
+  @Test
+  void whenGetBookNotExistingThenShouldReturn404() throws Exception {
+    String isbn = "73737313940";
+    given(bookService.viewBookDetails(isbn)).willThrow(BookNotFoundException.class);
+    mockMvc
+            .perform(get("/books/" + isbn))
+            .andExpect(status().isNotFound());
+  }
+
+}
+````
+````shell
+# 테스트 실행
+./gradlew test --tests BookControllerMvcTests
+````
 ### 3.4.4 @JsonTest를 사용한 JSON 직렬화 테스트
+- `@JsonTest` 애너테이션 사용시, 직렬화&역직렬화 를 테스트할 수 있다.
+````java
+@JsonTest
+class BookJsonTests {
+
+    @Autowired
+    private JacksonTester<Book> json;
+
+    @Test
+    void testSerialize() throws Exception {
+        var book = new Book("1234567890", "Title", "Author", 9.90);
+        var jsonContent = json.write(book);
+        assertThat(jsonContent).extractingJsonPathStringValue("@.isbn")
+                .isEqualTo(book.isbn());
+        assertThat(jsonContent).extractingJsonPathStringValue("@.title")
+                .isEqualTo(book.title());
+        assertThat(jsonContent).extractingJsonPathStringValue("@.author")
+                .isEqualTo(book.author());
+        assertThat(jsonContent).extractingJsonPathNumberValue("@.price")
+                .isEqualTo(book.price());
+    }
+
+    @Test
+    void testDeserialize() throws Exception {
+        var content = """
+                {
+                    "isbn": "1234567890",
+                    "title": "Title",
+                    "author": "Author",
+                    "price": 9.90
+                }
+                """;
+        assertThat(json.parse(content))
+                .usingRecursiveComparison()
+                .isEqualTo(new Book("1234567890", "Title", "Author", 9.90));
+    }
+
+}
+````
+````shell
+# 테스트 실행
+./gradlew test --tests BookJsonTests
+````
 
 ## 3.5 배포 파이프라인: 빌드 및 테스트
 ### 3.5.1 배포 파이프라인의 커밋 단계 이해
