--- a/ch03[클라우드 네이티브 개발 시작].md
+++ b/ch03[클라우드 네이티브 개발 시작].md
@@ -456,7 +456,23 @@ class BookJsonTests {
 ````
 
 ## 3.5 배포 파이프라인: 빌드 및 테스트
+- `지속적 전달`은 고품질 소프트웨어를 안전하게 출시하기 위한 총체적인 접근법이다.
+- 이러한 접근법을 채택하기 위한 기본 패턴은 배포 파이프라인이다.
+  - 커밋된 코드는 파이프라인을 통해 `배포 가능한 소프트웨어`가 된다.
+  - 배포 파이프라인은 가능한 한 `자동화`되어야 한다.
+- **배포 파이프라인**의 몇 가지 `주요 단계` 구분
+  - `커밋 단계`
+    - 코드를 커밋하면 `빌드`, `단위 테스트`, `통합테스트`, `정적 코드 분석` 및 패키지 생성
+    - 마지막에는 실행 가능한 애플리케이션 아티팩트가 아티팩트 저장소에 저장된다. => `릴리스 후보`
+  - `수락 단계`
+    - 수락 단계에서는 일반적으로 느리지만 전체 파이프라인 실행을 1시간 미만으로 유지하기 위해 노력해야 한다.
+    - `성능 테스트`, `보안 테스트`, `준수 테스트`, 사용성 테스트 같은 수동 작업 포함
+  - `프로덕션 단계`
+    - 릴리스 후보가 커밋&수락 단계를 거치면, 프로덕션에 배포할 수 있다고 확신할 수 있다.
+    - 배포 스크립트를 사용해 프로덕션 환경에 배포 된다.
+
 ### 3.5.1 배포 파이프라인의 커밋 단계 이해
+- 
 ### 3.5.2 깃허브 액션을 이용한 커밋 단계 구현
 
 ## 요약
