--- a/ch03[클라우드 네이티브 개발 시작].md
+++ b/ch03[클라우드 네이티브 개발 시작].md
@@ -472,8 +472,61 @@ class BookJsonTests {
     - 배포 스크립트를 사용해 프로덕션 환경에 배포 된다.
 
 ### 3.5.1 배포 파이프라인의 커밋 단계 이해
-- 
+- `지속적 통합`은 **지속적 전달의 핵심 관행**이다.
+  - 이 관행이 정착되면 하루에 여러 번 작은 분량의 작업 결과를 메인 브랜치에 커밋한다.
+  - 코드 커밋 후 변경된 애플리케이션을 `빌드`하고 `테스트`한다.
+````text
+- 배포 파이프라인 : 커밋 단계(파트 1)
+개발자 푸시 => 소스 코드 체크아웃 => 소스 코드 취약성 스캔(정적코드분석) => 빌드 => 단위/통합 테스트
+````
+- 폴라 북숍 프로젝트에서 사용할 취약성 스캐너는 **그라이프(grype)** 이다.
+  - 클라우드 네이티브 에서 많이 사용되고 있는 오픈소스 도구이다.
+  ````shell
+  grype . 
+  ````
 ### 3.5.2 깃허브 액션을 이용한 커밋 단계 구현
+- `깃허브 액션`은 관리형 솔루션으로 편리하게 사용할 수 있다.
+ - `깃허브 액션`은 깃허브에 내장된 플랫폼으로 코드 저장소에서 직접 소프트웨어 **워크플로**를 자동화할 수 있다.
+ - `워크플로`는 자동화된 프로세스다. 워크플로를 사용해 배포 파이프라인의 커밋단계를 모델링할 수 있다.
+ - `워크플로`는 깃허브 저장소 루트의 `.github/workflow` 폴더에 정의되어야하며, `yaml` 형식에 따라 기술된다.
+
+````yaml
+name : Commit Stage 		#워크플로의 이름
+on : push 			# 새코드를 저장소에 푸시하면 워크플로를 시작한다.
+
+jobs:
+  build: 			#작업 고유 식별자
+    name: Build and Test	#작업의 인간 친화적 명칭
+    runs-on: ubuntu-22.04	#작업이 실행될 머신의 유형(깃허브에서 제공하는 서버인 러너(runner) 인스턴스에서 실행된다.
+    permissions:		#작업에 부여된 권한
+      contents: read		#현재 깃 저장소를 체크 아웃할 수 있는 권한
+      security-events: write	#깃허브에 보안 이벤트를 제출할 수 있는 권한
+    steps:
+      - name: Checkout source code
+        uses: actions/checkout@v4	#현재 깃 저장소를 체크아웃한다.
+      - name: Set up JDK
+        uses: actions/setup-java@v4	#자바 런타임을 설치하고 설정한다.
+        with:				#사용할 버전,배포,캐시 유형을 정의한다.
+          distribution: temurin
+          java-version: 17
+          cache: gradle
+      - name: Build, unit tests and integration tests
+        run: |
+          chmod +x gradlew
+          ./gradlew build
+      - name: Code vulnerability scanning
+        uses: anchore/scan-action@v3	#그라이프를 사용해 취약성을 스캔한다.
+        id: scan			#현재 단계의 식별자를 할당하고 이후의 단계에서 참고할 수 있다.
+        with:
+          path: "${{ github.workspace }}"	#체크아웃 저장소 패스(경로)
+          fail-build: false			#보안 취약성 발견 시 빌드 실패여부
+          severity-cutoff: high			#오류로 간주할 최소 수준의 보안 유형(낮음,중간,높음,치명적)
+      - name: Upload vulnerability report	
+        uses: github/codeql-action/upload-sarif@v3	#깃허브로 보안 취약성 리포트(SARIF형식)전송
+        if: success() || failure()			#이전 단계가 실패하더라도 리포트 전송
+        with:
+          sarif_file: ${{ steps.scan.outputs.sarif }}	#이전 단계 결과의 리포트를 가져온다.
+````
 
 ## 요약
 
