Update ch03[클라우드 네이티브 개발 시작].md

--- a/ch03[클라우드 네이티브 개발 시작].md
+++ b/ch03[클라우드 네이티브 개발 시작].md
@@ -529,7 +529,14 @@ jobs:
 ````
 
 ## 요약
-
+- 각 클라우드 네이티브 애플리케이션은 `자체 코드베이스`에서 관리해야하고, 모든 의존성은 `그대르`이나 `메이븐`과 같은 도구를 사용해 `매니페스트 파일로 선언`해야 한다.
+- `클라우드 네이티브 애플리케이션`은 임베디드 서버를 사용하고 **독립적으로 실행**한다.
+- `톰캣`은 스프링 부트 애플리케이션에서 임베디드 서버로 기본 설정되어 있고 포트,연결,시간 초과 및 스레드 등의 설정을 정의할 수 있다.
+- `API 우선`원칙은 비지니스 로직을 구현하기 전에 API를 설계할 것을 권장한다. 다른팀은 해당 계약을 기반으로 미리 작업을 진행할 수 있다.
+- 스프링 부트는 `특정 목적`을 위한 통합 테스트에서 사용할 수 있는 몇 가지 어노테이션을 제공한다.
+ - `@WebMvcTest`는 스프링 MVC 구성 요소를 테스트하기 위한 어노테이션이다.
+ - `@JsonTest`는 JSON 직렬화 및 역직렬화를 테스트하기 위한 어노테이션이다.
+- `깃허브 액션`은 깃허브가 제공하는 도구로 `파이프라인`을 선언하고 작업을 `자동화`한다. => **배포 파이프라인을 만드는 데 사용**
 
 ## Useful Commands
 
