--- a/ch04[외부화 설정관리].md
+++ b/ch04[외부화 설정관리].md
@@ -5,8 +5,17 @@
 > - 스프링 클라우드 컨피그 서버로 설정 서버 구현
 > - 스프링 클라우드 컨피그 클라이언트를 사용한 애플리케이션 설정
 
+- `설정`은 15요소 방법론에 의하면 배포 간 변경될 수 있는 모든 것으로 정의된다.
+  - `크리덴셜`, `리소스 핸들`, `지원 서비스 URL` 등이다.
+- `클라우드 네이티브 애플리케이션의 핵심` 중 하나는 환경이 달라지더라도 `애플리케이션 아티팩트는 동일`하다.
+  - 동일한 빌드가, 동일하지 않은 설정 데이터와 함께 여러 환경에 배포된다.(그림 4.1)
+- `클라우드 네이티브 애플리케이션`은 코드를 재빌드하지 않고도 교체할 수 있도록 **외부화된 설정을 선호**한다.
+
 ## 4.1 스프링 설정 : 속성과 프로파일
+- 스프링에서는 `Environment`라는 편리한 추상화 기능을 통해, **모든 설정 데이터에 액세스**할 수 있다.
+
 ### 4.1.1 속성 : 설정을 위한 키-값 쌍
+//TODO
 ### 4.1.2 프로파일 : 기능 플래그와 설정 그룹
 
 ## 4.2 외부화된 구성 : 하나의 빌드, 여러 설정
